Add 'npm run-script dev'

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Euphoria (heim) client",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --hot --watch-poll --host 0.0.0.0"
   },
   "author": "",
   "license": "MIT",
