--- a/package.json
+++ b/package.json
@@ -33,11 +33,17 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
+    "emoji-annotation-to-unicode": "^0.2.2",
     "immutable": "^3.7.6",
+    "lodash": "^4.0.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
+    "react-router": "^2.0.0-rc5",
     "redux": "^3.0.5",
-    "redux-thunk": "^1.0.3"
+    "redux-simple-router": "^2.0.2",
+    "redux-thunk": "^1.0.3",
+    "string.fromcodepoint": "^0.2.1",
+    "twemoji": "^1.4.1"
   }
 }
