--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^2.0.3",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fileloader": "^1.0.0",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
     "react-hot-loader": "^1.3.0",
