--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "babel-preset-react": "^6.3.13",
     "core-js": "^2.0.3",
     "css-loader": "^0.23.1",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^3.1.0",
+    "eslint-loader": "^1.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "fileloader": "^1.0.0",
     "less": "^2.5.3",
@@ -35,6 +38,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
     "emoji-annotation-to-unicode": "^0.2.2",
+    "eslint-plugin-react": "^3.15.0",
     "immutable": "^3.7.6",
     "lodash": "^4.0.0",
     "moment": "^2.11.1",
