--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.0.0",
     "moment": "^2.11.1",
     "react": "^0.14.6",
+    "react-addons-pure-render-mixin": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
