--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-router": "^2.0.0-rc5",
     "redux": "^3.0.5",
     "redux-simple-router": "^2.0.3",
+    "redux-storage": "^1.4.4",
     "redux-thunk": "^1.0.3",
     "string.fromcodepoint": "^0.2.1",
     "twemoji": "^1.4.1"
