--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "immutable": "^3.7.6",
     "lodash": "^4.0.0",
     "moment": "^2.11.1",
+    "mousetrap": "^1.5.3",
     "react": "^0.14.6",
     "react-addons-pure-render-mixin": "^0.14.6",
     "react-dom": "^0.14.6",
