--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Euphoria (heim) client",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --hot --watch-poll --host 0.0.0.0"
+    "cover": "babel-istanbul cover ./node_modules/.bin/tape $(find . -path ./node_modules -prune -o -path build -prune -o -name '*.test.js' -print)",
+    "dev": "webpack-dev-server --hot --watch-poll --host 0.0.0.0",
+    "test": "tape -r babel-register $(find . -path ./node_modules -prune -o -path build -prune -o -name '*.test.js' -print)"
   },
   "author": "",
   "license": "MIT",
@@ -13,11 +15,14 @@
     "babel": "^6.3.26",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
+    "babel-istanbul": "^0.6.0",
     "babel-loader": "^6.2.1",
+    "babel-plugin-transform-object-assign": "^6.3.13",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-register": "^6.4.3",
     "core-js": "^2.0.3",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
@@ -25,11 +30,13 @@
     "eslint-loader": "^1.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "fileloader": "^1.0.0",
+    "istanbul": "^0.4.2",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
     "react-hot-loader": "^1.3.0",
     "static-site-generator-webpack-plugin": "^2.0.1",
     "style-loader": "^0.13.0",
+    "tape": "^4.4.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
