--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "cover": "babel-istanbul cover ./node_modules/.bin/tape $(find . -path ./node_modules -prune -o -path build -prune -o -name '*.test.js' -print)",
     "dev": "webpack-dev-server --hot --watch-poll --host 0.0.0.0",
-    "test": "tape -r babel-register $(find . -path ./node_modules -prune -o -path build -prune -o -name '*.test.js' -print)"
+    "test": "tape -r babel-register $(find . -path ./node_modules -prune -o -path build -prune -o -name '*.test.js' -print) | faucet"
   },
   "author": "",
   "license": "MIT",
@@ -29,6 +29,7 @@
     "eslint-config-airbnb": "^3.1.0",
     "eslint-loader": "^1.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "faucet": "0.0.1",
     "fileloader": "^1.0.0",
     "istanbul": "^0.4.2",
     "less": "^2.5.3",
